--- a/src/components/BannerText/BannerText.css
+++ b/src/components/BannerText/BannerText.css
@@ -14,7 +14,7 @@
   /* letter-spacing: 2; */
   /* left: 50%;*/
   /* top: 50%; */
-  font-family: "Helvetica Bold";
+  font-family: "Blanka Regular";
   /* text-transform: uppercase; */
   font-size: 5.6em;
 
@@ -26,6 +26,7 @@
 }
 
 @keyframes blink {
+
   0%,
   22%,
   36%,
@@ -35,11 +36,13 @@
       -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
       0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
   }
+
   28%,
   33% {
     color: #ff65bd;
     text-shadow: none;
   }
+
   82%,
   97% {
     color: #ff2483;
@@ -60,6 +63,7 @@
     color: #6b1839;
     text-shadow: none;
   }
+
   100% {
     color: #ffe6ff;
     text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
@@ -193,6 +197,7 @@
     opacity: 1;
   }
 }
+
 @media only screen and (max-width: 768px) {
   .sign {
     font-size: 3em;
