--- a/src/components/PreLoader/PreLoader.css
+++ b/src/components/PreLoader/PreLoader.css
@@ -7,13 +7,13 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 1536px;
+  width: 100%;
   height: auto;
 }
 
 @media only screen and (max-width: 768px) {
-    .video {
-      transform: translateX(-570px);
-      height: 900px;
-    }
+  .video {
+    transform: translateX(-570px);
+    height: 900px;
   }
+}
