--- a/src/components/BannerText/BannerText.css
+++ b/src/components/BannerText/BannerText.css
@@ -19,7 +19,7 @@
   font-size: 5.6em;
 
   color: #aa367c;
-  text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
+  text-shadow: 0 0 0.6rem #ffe6ffe0, 0 0 1.5rem #ff65bd,
     -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
     0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
   animation: shine 2s forwards, flicker 3s infinite;
@@ -31,7 +31,7 @@
   22%,
   36%,
   75% {
-    color: #ffe6ff;
+    color: #aa367c;
     text-shadow: 0 0 0.6rem #ffe6ff, 0 0 1.5rem #ff65bd,
       -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
       0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
