--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #0000;
+  background-color: #1b1c27;
 }
 
 .footerContainer {
@@ -11,7 +11,7 @@
   margin: 0;
   color: #fff;
   text-align: center;
-  font-family: 'Helvetica';
+  font-family: "Helvetica";
 }
 
 .footerContainer a {
@@ -35,7 +35,7 @@
   width: 200px;
 }
 
-@media screen and (max-width:728px) {
+@media screen and (max-width: 728px) {
   .footer-logo img {
     height: 100px;
     width: 100px;
