--- a/src/components/MobileNavbar/MobileNavbar.css
+++ b/src/components/MobileNavbar/MobileNavbar.css
@@ -1,6 +1,6 @@
 .bottom-navbar {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #0a449b;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #1b1c27;
 }
