--- a/src/components/Schedule.module.css
+++ b/src/components/Schedule.module.css
@@ -47,7 +47,7 @@
 .keyDatesCards {
   border-radius: 10px;
 
-  background: #121212;
+  background: #1b1c27;
   box-shadow: #ab367c 0px 20px 20px, #967fd6b3 0px -12px 30px,
     #ab367c 0px 4px 6px, #967fd6b3 0px 12px 13px, #ab367c 0px -3px 5px;
 
