New Sponsors Update

--- a/src/components/GeneralSponsorCard.css
+++ b/src/components/GeneralSponsorCard.css
@@ -1,4 +1,4 @@
-.mediumcard {
+.generalcard {
   cursor: pointer;
   /* border-radius: 15px; */
   overflow: hidden;
@@ -10,19 +10,19 @@
   align-items: center;
   justify-content: center;
 }
-.mediumcard:hover {
+.generalcard:hover {
   transition: 0.3s ease-in-out;
   /* box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.7); */
   box-shadow: rgb(202, 28, 225) 0px 4px 10px;
 }
-.mediumcard img {
+.generalcard img {
   /* width: 100%;
-  height: 100%; */
+    height: 100%; */
   background-position: center;
   background-size: cover;
 }
 @media screen and (min-width: 64rem) {
-  .mediumcard {
+  .generalcard {
     /* width: 511px; */
     width: 406px;
     height: 240px;
@@ -30,14 +30,14 @@
   }
 }
 @media screen and (max-width: 64rem) {
-  .mediumcard {
+  .generalcard {
     width: 40vw;
     height: 24vw;
     /* margin: 20px; */
   }
 }
 @media screen and (max-width: 700px) {
-  .mediumcard {
+  .generalcard {
     height: 45vw;
     width: 80vw;
     /* margin: 10px; */
