--- a/src/components/Sponsor.css
+++ b/src/components/Sponsor.css
@@ -42,16 +42,18 @@
 }
 
 .spon_us {
-  width: 23rem;
+  width: 21rem;
   /* height: 12rem; */
-  height: 16rem;
+  height: 23rem;
   box-shadow: rgb(202, 28, 225) 0px 4px 10px;
   border-radius: 20px;
   margin: auto;
-  background: url("/src/assets/img/HO.png") 94% 122% / 42% no-repeat transparent;
+  background: url("/src/assets/img/HO.png") 94% 122% / 63% no-repeat transparent;
   padding: 3rem 6rem 3rem 5rem;
   background-repeat: no-repeat;
-  background-position: 106% 120%;
+  /* background-position: 106% 120%; */
+  /* background-position: 156% 91%; */
+  background-position: 145% 64%;
 }
 
 .spon_right {
@@ -59,12 +61,6 @@
   justify-content: space-between;
   flex-direction: column;
   align-items: end;
-}
-
-.boxx {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
 }
 
 .boxx a {
@@ -120,8 +116,8 @@
     margin-top: 2rem;
   }
   .spon_us {
-    width: 71rem;
-    height: 27rem;
+    width: 38rem;
+    height: 32rem;
   }
   .spon_head {
     font-size: 70px;
@@ -155,13 +151,17 @@
 @media only screen and (min-width: 768px) {
   .spon_us {
     width: 46rem;
+    height: 36rem;
   }
 }
 
 @media only screen and (min-width: 1024px) {
   .spon_us {
     width: 61rem;
+    height: 32rem;
     padding: 3rem 5rem 3rem 5rem;
+    background: url("/src/assets/img/HO.png") 123% 67% / 46% no-repeat
+      transparent;
   }
   .boxx {
     margin-bottom: 2rem;
@@ -171,7 +171,11 @@
 @media only screen and (min-width: 1536px) {
   .spon_us {
     width: 71rem;
+    height: 28rem;
     padding: 3rem 5rem 2rem 3rem;
+    background-position: 120% 120%;
+    background: url("/src/assets/img/HO.png") 119% 122% / 41% no-repeat
+      transparent;
   }
   .boxx {
     margin-bottom: 0rem;
