--- a/src/components/GoldSponsorCard/GoldSponsorCard.css
+++ b/src/components/GoldSponsorCard/GoldSponsorCard.css
@@ -4,7 +4,8 @@
     overflow: hidden;
     transition: 0.3s ease-in-out;
     /* box-shadow: 2px 3px 10px rgba(0, 0, 0, 2); */
-    box-shadow: rgb(48, 3, 54) 0px 4px 10px;
+    /* box-shadow: rgb(48, 3, 54) 0px 4px 10px; */
+    box-shadow: rgb(85, 6, 95) 0px 4px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
