--- a/src/components/HackathonOverview.css
+++ b/src/components/HackathonOverview.css
@@ -9,7 +9,8 @@
 }
 
 .hackathon-overview-text {
-  font-family: "Helvetica";
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
   font-size: 1.4rem;
 }
 
