--- a/src/App.css
+++ b/src/App.css
@@ -4,26 +4,7 @@
   font-weight: 700;
 }
 
-@font-face {
-  font-family: Helvetica;
-  src: url("./assets/font/Helvetica.ttf");
-}
-
-@font-face {
-  font-family: Helvetica Bold;
-  src: url("./assets/font/Helvetica-Bold.ttf");
-}
-
-@font-face {
-  font-family: Helvetica Light;
-  src: url("./assets/font//helvetica-light-587ebe5a59211.ttf");
-}
-
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Aldrich&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap");
 
 /************ Default Css ************/
 * {
@@ -43,7 +24,7 @@ body {
   position: relative;
   background-color: #1b1c27 !important;
   color: #fff !important;
-  font-family: "Helvetica", sans-serif !important;
+  /* font-family: "Helvetica", sans-serif !important; */
 }
 
 html,
@@ -165,7 +146,9 @@ nav.navbar a.navbar-brand {
 }
 
 nav.navbar .navbar-nav .nav-link.navbar-link {
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
+
   color: #fff !important;
   letter-spacing: 0.8px;
   padding: 0 25px;
@@ -228,7 +211,8 @@ span.navbar-text {
 }
 
 .navbar-text button {
-  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
   /* color: #fff; */
   border: 1px solid #fff;
   padding: 18px 34px;
