--- a/src/components/FAQ/FAQ.module.css
+++ b/src/components/FAQ/FAQ.module.css
@@ -30,6 +30,8 @@
   padding: 10px;
 }
 .questionBox p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
   text-align: left;
   color: white;
   font-size: 1rem;
@@ -54,6 +56,8 @@
 }
 
 .questionBoxElongate p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
   text-align: left;
   color: white;
   font-size: inherit;
@@ -82,4 +86,6 @@
   color: white;
   text-align: left;
   margin: 10px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
 }
