--- a/src/components/Themes/Themes.css
+++ b/src/components/Themes/Themes.css
@@ -2,15 +2,16 @@
   height: auto;
   width: auto;
   padding: 1rem;
-  display: flex;
+  /* display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: wrap; */
   gap: 20px;
 }
 
 .theme-card {
   height: 300px;
   width: 200px;
+  border-radius: 13px;
 }
 
 .theme-card h1 {
