SDG Theme Update0

--- a/src/components/CollegeClub/CollegeClub.css
+++ b/src/components/CollegeClub/CollegeClub.css
@@ -4,7 +4,7 @@
   background: transparent;
   background-size: cover;
   background-repeat: no-repeat;
-  margin-top: 5.28rem !important;
+  /* margin-top: 5.28rem !important; */
 }
 .top .topContainer {
   padding: 10% 6.25vw;
