--- a/src/components/FaceGallery/ImageFilter.css
+++ b/src/components/FaceGallery/ImageFilter.css
@@ -116,10 +116,19 @@
   width: 370px;
 }
 
+.PaddingGallery {
+  padding-left: 14px;
+  padding-right: 14px;
+}
+
 @media screen and (min-width: 640px) {
   .ClickedImage img {
     height: 500px;
     width: 580px;
+  }
+  .PaddingGallery {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -127,5 +136,12 @@
   .ClickedImage img {
     height: 500px;
     width: 880px;
-  } 
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .PaddingGallery {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
 }
