--- a/src/components/PastWinners/WinnerCard.css
+++ b/src/components/PastWinners/WinnerCard.css
@@ -1,89 +1,94 @@
-
 /* WinnerCard.css */
 .card-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    padding: 20px;
-  }
-  
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  padding: 20px;
+}
+
+.card {
+  position: relative;
+  width: 100%;
+  height: 300px; /* Adjust to your preference */
+  overflow: hidden;
+  border: 1px solid #000;
+}
+
+/* Responsive design for smaller screens */
+@media (max-width: 768px) {
   .card {
-    position: relative;
-    width: 100%;
-    height: 300px;
-    overflow: hidden;
-    border: 1px solid #000;
+    height: 200px; /* Adjust for smaller height in mobile view */
   }
-  
-  .curtain-panel {
-    position: absolute;
-    top: 0;
-    width: 50%;
-    height: 100%;
-    z-index: 2;
-    transition: transform 0.5s ease;
-  }
-  
-  .curtain-left::before,
-  .curtain-right::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .curtain-left::before {
-    background: url('../../assets/img/pastwinners/1stprizeOne.png') center/cover no-repeat; /* Set the path to your first image */
-    left: 0;
-  }
-  
-  .curtain-right::before {
-    background: url('../../assets/img/pastwinners/1stprizeTwo.png') center/cover no-repeat; /* Set the path to your second image */
-    right: 0;
-  }
-  
-  .curtain-left.card2::before {
-    background: url('../../assets/img/pastwinners/2ndprizeOne.png') center/cover no-repeat; /* Set the path to your third image */
-  }
-  
-  .curtain-right.card2::before {
-    background: url('../../assets/img/pastwinners/2ndprizeTwo.png') center/cover no-repeat; /* Set the path to your fourth image */
-    right: 0;
-  }
-  
-  .curtain-left.card3::before {
-    background: url('../../assets/img/pastwinners/3rdprizeOne.png') center/cover no-repeat; /* Set the path to your fifth image */
-  }
-  
-  .curtain-right.card3::before {
-    background: url('../../assets/img/pastwinners/3rdprizeTwo.png') center/cover no-repeat; /* Set the path to your sixth image */
-    right: 0;
-  }
-  
-  .curtain-left {
-    left: 0;
-    transform-origin: left;
-  }
-  
-  .curtain-right {
-    right: 0;
-    transform-origin: right;
-  }
-  
-  .card-content {
-    position: absolute;
-    top: 0;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .card:hover .curtain-left {
-    transform: translateX(-100%);
-  }
-  
-  .card:hover .curtain-right {
-    transform: translateX(100%);
-  }
-  
+}
+
+.curtain-panel {
+  position: absolute;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  z-index: 2;
+  transition: transform 0.5s ease;
+}
+
+.curtain-left::before,
+.curtain-right::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.curtain-left::before {
+  background: url('../../assets/img/pastwinners/1stprizeOne.png') center/cover no-repeat;
+  left: 0;
+}
+
+.curtain-right::before {
+  background: url('../../assets/img/pastwinners/1stprizeTwo.png') center/cover no-repeat;
+  right: -0.1px;
+}
+
+.curtain-left.card2::before {
+  background: url('../../assets/img/pastwinners/2ndprizeOne.png') center/cover no-repeat;
+}
+
+.curtain-right.card2::before {
+  background: url('../../assets/img/pastwinners/2ndprizeTwo.png') center/cover no-repeat;
+  right: -0.99px;
+}
+
+.curtain-left.card3::before {
+  background: url('../../assets/img/pastwinners/3rdprizeOne.png') center/cover no-repeat;
+}
+
+.curtain-right.card3::before {
+  background: url('../../assets/img/pastwinners/3rdprizeTwo.png') center/cover no-repeat;
+  right: -0.1px;
+}
+
+.curtain-left {
+  left: 0;
+  transform-origin: left;
+}
+
+.curtain-right {
+  right: 0;
+  transform-origin: right;
+}
+
+.card-content {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.card:hover .curtain-left {
+  transform: translateX(-100%);
+}
+
+.card:hover .curtain-right {
+  transform: translateX(100%);
+}
