--- a/src/components/PastWinners/WinnerCard.css
+++ b/src/components/PastWinners/WinnerCard.css
@@ -46,7 +46,7 @@
 
 .curtain-right::before {
   background: url('../../assets/img/pastwinners/1stprizeTwo.png') center/cover no-repeat;
-  right: -0.1px;
+  right: 0;
 }
 
 .curtain-left.card2::before {
@@ -55,7 +55,7 @@
 
 .curtain-right.card2::before {
   background: url('../../assets/img/pastwinners/2ndprizeTwo.png') center/cover no-repeat;
-  right: -0.99px;
+  right: 0;
 }
 
 .curtain-left.card3::before {
@@ -64,7 +64,7 @@
 
 .curtain-right.card3::before {
   background: url('../../assets/img/pastwinners/3rdprizeTwo.png') center/cover no-repeat;
-  right: -0.1px;
+  right: 0;
 }
 
 .curtain-left {
