--- a/src/components/PastWinners/WinnerCard.css
+++ b/src/components/PastWinners/WinnerCard.css
@@ -9,7 +9,7 @@
 .card {
   position: relative;
   width: 100%;
-  height: 300px; /* Adjust to your preference */
+  height: 300px;
   overflow: hidden;
   border: 1px solid #000;
 }
@@ -17,7 +17,7 @@
 /* Responsive design for smaller screens */
 @media (max-width: 768px) {
   .card {
-    height: 200px; /* Adjust for smaller height in mobile view */
+    height: 200px;
   }
 }
 
@@ -46,7 +46,7 @@
 
 .curtain-right::before {
   background: url('../../assets/img/pastwinners/1stprizeTwo.png') center/cover no-repeat;
-  right: 0;
+  right: -0.1px;
 }
 
 .curtain-left.card2::before {
@@ -55,7 +55,7 @@
 
 .curtain-right.card2::before {
   background: url('../../assets/img/pastwinners/2ndprizeTwo.png') center/cover no-repeat;
-  right: 0;
+  right: -0.99px;
 }
 
 .curtain-left.card3::before {
@@ -64,7 +64,7 @@
 
 .curtain-right.card3::before {
   background: url('../../assets/img/pastwinners/3rdprizeTwo.png') center/cover no-repeat;
-  right: 0;
+  right: -0.1px;
 }
 
 .curtain-left {
@@ -83,6 +83,20 @@
   z-index: 1;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-text {
+  margin-bottom: 10px;
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.7); /* Semi-transparent white background */
+  color: #000;
+  font-size: 16px;
+  font-weight: bold;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .card:hover .curtain-left {
