--- a/src/components/Background.css
+++ b/src/components/Background.css
@@ -1,13 +1,49 @@
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 393px) {
   video {
-    transform: translateX(-156px);
+    transform: translateX(-436px);
     height: 700px;
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1068px) {
+@media only screen and (min-width: 640px) {
+  video {
+    transform: translateX(-304px);
+    height: 700px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  video {
+    transform: translateX(-227px);
+    height: 700px;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  video {
+    transform: translateX(-100px);
+    height: 700px;
+  }
+}
+
+@media only screen and (min-width: 1080px) {
+  video {
+    transform: translateX(1px);
+    height: 700px;
+  }
+}
+
+@media only screen and (min-width: 1536px) {
+  video {
+    transform: none;
+    height: 700px;
+    width: 1700px;
+  }
+}
+
+/* @media only screen and (min-width: 768px) and (max-width: 1068px) {
   video {
     height: 876px;
     transform: translateX(-133px);
   }
-}
+} */
