--- a/src/components/Background.css
+++ b/src/components/Background.css
@@ -19,7 +19,7 @@
   }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   video {
     transform: translateX(-100px);
     height: 700px;
@@ -48,6 +48,14 @@
     transform: none;
     height: 700px;
     width: 1700px;
+  }
+}
+
+@media only screen and (max-width: 2386px) {
+  video {
+    transform: none;
+    height: 1000px;
+    width: 2500px;
   }
 }
 
