--- a/src/components/Background.css
+++ b/src/components/Background.css
@@ -7,12 +7,12 @@
   }
 }
 
-@media only screen and (min-width: 1024px) {
+/* @media only screen and (min-width: 1024px) {
   video {
     transform: translateX(-100px);
     height: 700px;
   }
-}
+} */
 
 @media only screen and (min-width: 1080px) {
   video {
@@ -34,6 +34,14 @@
     height: 700px;
   }
 }
+
+@media only screen and (min-width: 1024px) {
+  video {
+    transform: translateX(1px);
+    height: 700px;
+  }
+}
+
 
 @media only screen and (min-width: 1280px) {
   video {
@@ -74,3 +82,5 @@
     transform: translateX(-133px);
   }
 } */
+
+
