dates videos compressed and register button fixed for some screens and sponsor fill the form button updated to email us

--- a/src/components/Background.css
+++ b/src/components/Background.css
@@ -1,5 +1,3 @@
-
-
 @media only screen and (min-width: 768px) {
   video {
     transform: translateX(1px);
@@ -62,7 +60,7 @@
 @media only screen and (min-width: 1536px) {
   video {
     transform: none;
-    height: 700px;
+    height: 600px;
     width: 1700px;
   }
 }
@@ -83,4 +81,59 @@
   }
 } */
 
+/* Media query for screens 1172px and above */
+@media (min-width: 1172px){
+  .absolute {
+    top: 32rem; /* Adjust the value based on your design */
+  }
+}
 
+@media (min-width: 1154px) and (min-width: 1165px){
+  .absolute {
+    top: 33rem; /* Adjust the value based on your design */
+  }
+}
+
+
+@media (min-width: 1300px) {
+  .absolute {
+    top: 34rem; /* Adjust the value based on your design */
+  }
+}
+
+@media (min-width: 1350px) {
+  .absolute {
+    top: 36rem; /* Adjust the value based on your design */
+  }
+}
+
+
+@media (min-width: 1400px) {
+  .absolute {
+    top: 37rem; /* Adjust the value based on your design */
+  }
+}
+
+@media (min-width: 1600px) {
+  .absolute {
+    top: 12rem; /* Adjust the value based on your design */
+  }
+}
+
+@media (min-width: 1840px) {
+  .absolute {
+    top: 64rem; /* Adjust the value based on your design */
+  }
+}
+
+@media (min-width: 1900px) {
+  .absolute {
+    top: 80rem; /* Adjust the value based on your design */
+  }
+}
+
+@media (min-width: 1600px) {
+  .absolute {
+    top: 45rem; /* Adjust the value based on your design */
+  }
+}
