--- a/src/components/MapChart/MapChart.css
+++ b/src/components/MapChart/MapChart.css
@@ -62,6 +62,32 @@
   margin-top: 16px;
 }
 
+#blue-cyan {
+  background: linear-gradient(98.84deg, #8680bb 43.27%, #84b4b5 71.84%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  /* text-fill-color: transparent; */
+}
+#purple-pink {
+  background: linear-gradient(98.84deg, #a8519f 43.27%, #644ea0 71.84%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+#green-yellow {
+  background: linear-gradient(98.84deg, #80ffea 43.27%, #8aff81 71.84%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+#orange-pink {
+  background: linear-gradient(98.84deg, #ffff80 43.27%, #ff82bf 71.84%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
 .Mapcircle {
   background: transparent;
   width: 100px;
