--- a/src/components/GeneralSponsorCard.css
+++ b/src/components/GeneralSponsorCard.css
@@ -17,15 +17,17 @@
   box-shadow: rgb(202, 28, 225) 0px 4px 10px;
 }
 .generalcard img {
-  width: 10rem;
+  width: 14rem;
   background-position: center;
   background-size: cover;
 }
 @media screen and (min-width: 64rem) {
   .generalcard {
     /* width: 511px; */
-    width: 406px;
-    height: 240px;
+    /* width: 406px;
+    height: 240px; */
+    width: 421px;
+    height: 235px;
     /* margin: 20px; */
   }
 }
@@ -58,6 +60,6 @@
 
 @media screen and (min-width: 1024px) {
   .generalcard img {
-    width: 13rem;
+    width: 19rem;
   }
 }
