--- a/src/components/MediumSponsorsCard.css
+++ b/src/components/MediumSponsorsCard.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-radius: 20px;
 }
 .mediumcard:hover {
   /* transition: 0.3s ease-in-out; */
