--- a/src/components/reg-button.css
+++ b/src/components/reg-button.css
@@ -1,72 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap");
 
 /* CSS */
 .button-86 {
-    all: unset;
-    width: 100px;
-    height: 30px;
-    font-size: 16px;
-    background: transparent;
-    border: none;
-    position: relative;
-    color: #f0f0f0;
-    cursor: pointer;
-    z-index: 1;
-    padding: 10px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    white-space: nowrap;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    font-family: 'Poppins', sans-serif;
+  all: unset;
+  width: 178px;
+  height: 30px;
+  font-size: 16px;
+  background: transparent;
+  border: none;
+  position: relative;
+  color: #f0f0f0;
+  cursor: pointer;
+  z-index: 1;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  font-family: "Poppins", sans-serif;
 }
 
 .button-86::after,
 .button-86::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: -99999;
-    transition: all .4s;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -99999;
+  transition: all 0.4s;
 }
 
 .button-86::before {
-    transform: translate(0%, 0%);
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90.21deg,
-            rgba(170, 54, 124, 0.800) -5.91%,
-            rgba(73, 47, 189, 0.800) 111.58%);
-    border-radius: 10px;
+  transform: translate(0%, 0%);
+  width: 100%;
+  height: 100%;
+  /* background: linear-gradient(
+    90.21deg,
+    rgba(170, 54, 124, 0.8) -5.91%,
+    rgba(73, 47, 189, 0.8) 111.58%
+  ); */
+  background: linear-gradient(
+    60deg,
+    rgba(170, 54, 124, 0.8) 0%,
+    rgba(73, 47, 189, 0.8) 100%,
+    rgba(26, 188, 156, 0.8) 100%
+  );
+  border-radius: 10px;
 }
 
 .button-86::after {
-    transform: translate(10px, 10px);
-    width: 35px;
-    height: 35px;
-    background: #ffffff15;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border-radius: 50px;
+  transform: translate(10px, 10px);
+  width: 35px;
+  height: 35px;
+  background: #ffffff15;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 50px;
 }
 
 .button-86:hover::before {
-    transform: translate(5%, 20%);
-    width: 110%;
-    height: 110%;
+  transform: translate(5%, 20%);
+  width: 110%;
+  height: 110%;
 }
 
 .button-86:hover::after {
-    border-radius: 10px;
-    transform: translate(0, 0);
-    width: 100%;
-    height: 100%;
+  border-radius: 10px;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 100%;
 }
 
 .button-86:active::after {
-    transition: 0s;
-    transform: translate(0, 5%);
+  transition: 0s;
+  transform: translate(0, 5%);
 }
