--- a/src/components/GeneralSponsorCard.css
+++ b/src/components/GeneralSponsorCard.css
@@ -5,15 +5,18 @@
   transition: 0.3s ease-in-out;
   /* box-shadow: 2px 3px 10px rgba(0, 0, 0, 2); */
   /* box-shadow: rgb(48, 3, 54) 0px 4px 10px; */
-  box-shadow: rgb(85, 6, 95) 0px 4px 10px;
+  /* box-shadow: rgb(85, 6, 95) 0px 4px 10px; */
+  box-shadow: inset 0px -4px 10px rgba(255, 130, 191, 0.7); /* Adjust box shadow color */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-radius: 20px;
 }
 .generalcard:hover {
   transition: 0.3s ease-in-out;
   /* box-shadow: 2px 3px 20px rgba(0, 0, 0, 0.7); */
+  /* box-shadow: rgb(202, 28, 225) 0px 4px 10px; */
   box-shadow: rgb(202, 28, 225) 0px 4px 10px;
 }
 .generalcard img {
@@ -27,7 +30,7 @@
     /* width: 406px;
     height: 240px; */
     width: 421px;
-    height: 235px;
+    height: 321px;
     /* margin: 20px; */
   }
 }
@@ -40,7 +43,7 @@
 }
 @media screen and (max-width: 700px) {
   .generalcard {
-    height: 45vw;
+    height: 65vw;
     width: 80vw;
     /* margin: 10px; */
   }
