--- a/src/components/Teams/xyz.css
+++ b/src/components/Teams/xyz.css
@@ -117,5 +117,13 @@
 }
 
 .css-ptd8dw {
-  margin-left: 0px;
+  margin-left: 0px !important;
+}
+
+.css-n5v0xo {
+  margin-left: 0px !important;
+}
+
+.css-o6guma {
+  margin-left: 0px !important;
 }
